# dioxus_asset_bug

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs
src/components/: mod.rs
src/components/input/: style.css
